.archive_historical_garbage/manifests/06-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teamcity-server-proxy
  namespace: teamcity
spec:
  replicas: 2
  selector:
    matchLabels:
      app: teamcity-server-proxy
      component: proxy
  template:
    metadata:
      labels:
        app: teamcity-server-proxy
        component: proxy
    spec:
      containers:
      - name: haproxy
        image: haproxy:3.0
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
                - sh
                - -c
                - sleep 10; kill -s SIGUSR1 1
        startupProbe:
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          failureThreshold: 120
          periodSeconds: 5
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            cpu: "10m"
            memory: "80Mi"
        volumeMounts:
          - name: haproxy-config
            mountPath: /usr/local/etc/haproxy
      volumes:
      - name: haproxy-config
        configMap:
          name: teamcity-server-haproxy-cfg
          defaultMode: 420
          optional: false
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "1"
